Fix : Convert Method